# PokeRL

./: README.md  parse_utils.py  random_gen_utils.py
data/: ability_dex.json  abilitydex.json  data.json  data_dex.json  items_dex.json  learnsets_dex.json  moves_dex.json  species_dex.json  typechart_dex.json
data/battle_logs/random_battle/: random_battle.txt
py/: constants.py  main.py  random_gen_utils.py
rust/: Cargo.toml
rust/src/: constants.rs  dex.rs  main.rs  parse.rs
rust/src/battle/: battle.pest  mod.rs
