[package]
name = "pokerl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
const_format = "0.2.32"
pest = "2.7.6"
pest_derive = "2.7.6"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
strum = "0.25.0"
strum_macros = "0.25.3"
