[package]
name = "pokerl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
const_format = "0.2.32"
env_logger = "0.11.1"
log = "0.4.20"
pest = "2.7.6"
pest_derive = "2.7.6"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
strum = "0.25.0"
strum_macros = "0.25.3"
